# cirs

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  LICENSE-MIT  README.md  SUPPORT.md  x86_64-unknown-linux-cirs  x86_64-unknown-linux-cirs.json
.github/: COMMIT_FORMAT.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
scripts/: x86_64-unknown-linux-cirs  x86_64-unknown-linux-cirs.sh
scripts/ci/travis/install/: x86_64-unknown-linux-cirs.sh
src/: lib.rs
